# cpu-playground

./: .clang-format  CMakeLists.txt
src/arch/ez8/: cpu.cpp  isa.cpp
src/common/: instr.cpp  token.cpp
src/inc/: args.hpp  cpu.hpp  formatters.hpp  instr.hpp  match.hpp  test.hpp  token.hpp  types.hpp  utils.hpp
src/main/: as.cpp  emu.cpp
test/: bits_test.cpp  parser.cpp  parser_test.cpp  tokenizer.cpp  tokenizer_test.cpp
